--- a/frontend/src/locales/es/admin.json
+++ b/frontend/src/locales/es/admin.json
@@ -69,7 +69,223 @@
     "question": "Pregunta",
     "addNew": "Agregar un nuevo",
     "cancel": "Cancelar",
-    "create": "Crear"
+    "create": "Crear",
+    "subjectName": "Nombre de la Materia",
+    "duration": "Duración",
+    "type": "Tipo",
+    "multipleChoice": "Opción Múltiple",
+    "difficulty": "Dificultad",
+    "medium": "Medio",
+    "options": "Opciones",
+    "optionsCount": "opciones",
+    "answer": "Respuesta",
+    "draft": "Borrador",
+    "created": "Creado",
+    "manageSubjectsFor": "Gestionar materias y temas para",
+    "manageQuestionsFor": "Gestionar preguntas para",
+    "searchSubjectsPlaceholder": "Buscar materias...",
+    "searchQuestionsPlaceholder": "Buscar preguntas...",
+    "toPlatform": "a la plataforma",
+    "examNamePlaceholder": "ej., SAT",
+    "country": "País",
+    "countryPlaceholder": "ej., USA",
+    "descriptionPlaceholder": "Breve descripción del examen",
+    "flagEmoji": "Emoji de Bandera",
+    "flagPlaceholder": "🇺🇸",
+    "selectStatus": "Seleccionar estado",
+    "active": "Activo",
+    "archived": "Archivado",
+    "questionPlaceholder": "Ingresa el texto de la pregunta",
+    "selectType": "Seleccionar tipo",
+    "trueFalse": "Verdadero/Falso",
+    "shortAnswer": "Respuesta Corta",
+    "selectDifficulty": "Seleccionar dificultad",
+    "easy": "Fácil",
+    "hard": "Difícil",
+    "answerOptions": "Opciones de Respuesta",
+    "optionPlaceholder": "Opción {{id}}",
+    "correctAnswer": "Respuesta Correcta",
+    "selectCorrectAnswer": "Seleccionar respuesta correcta",
+    "emptyOption": "Opción vacía",
+    "explanationConcept": "Concepto de Explicación",
+    "conceptPlaceholder": "Concepto principal que se está evaluando",
+    "reasoning": "Razonamiento",
+    "reasoningPlaceholder": "Explica por qué esta es la respuesta correcta"
+  },
+  "settings": {
+    "title": "Configuración",
+    "description": "Configurar ajustes de la aplicación y preferencias.",
+    "accessDenied": "Acceso denegado. Solo los Super Administradores pueden acceder a la configuración.",
+    "accessDeniedTitle": "Acceso Denegado",
+    "accessDeniedDescription": "No tienes permisos para acceder a esta página.",
+    "superAdminRequired": "Se Requiere Acceso de Super Administrador",
+    "superAdminMessage": "Solo los Super Administradores pueden acceder a la configuración del sistema. Por favor, contacta a tu administrador del sistema si necesitas acceso a estas funciones.",
+    "returnToDashboard": "Volver al Panel de Control",
+    "failedToLoad": "Error al cargar la configuración del sistema. Usando valores predeterminados.",
+    "generalSettings": "Configuración General",
+    "applicationName": "Nombre de la Aplicación",
+    "version": "Versión",
+    "description": "Descripción",
+    "maintenanceMode": "Modo de Mantenimiento",
+    "saveGeneralSettings": "Guardar Configuración General",
+    "databaseSettings": "Configuración de Base de Datos",
+    "databaseHost": "Host de Base de Datos",
+    "port": "Puerto",
+    "databaseName": "Nombre de Base de Datos",
+    "enableSSL": "Habilitar SSL",
+    "saveDatabaseSettings": "Guardar Configuración de Base de Datos",
+    "emailSettings": "Configuración de Email",
+    "smtpHost": "Host SMTP",
+    "smtpPort": "Puerto SMTP",
+    "smtpUsername": "Usuario SMTP",
+    "fromEmail": "Email de Origen",
+    "enableEmailNotifications": "Habilitar Notificaciones por Email",
+    "saveEmailSettings": "Guardar Configuración de Email",
+    "securitySettings": "Configuración de Seguridad",
+    "sessionTimeout": "Tiempo de Espera de Sesión (minutos)",
+    "maxLoginAttempts": "Máximo de Intentos de Inicio de Sesión",
+    "enableTwoFactor": "Habilitar Autenticación de Dos Factores",
+    "enforcePasswordComplexity": "Aplicar Complejidad de Contraseña",
+    "enableAuditLogging": "Habilitar Registro de Auditoría",
+    "saveSecuritySettings": "Guardar Configuración de Seguridad",
+    "localizationSettings": "Configuración de Localización",
+    "defaultLanguage": "Idioma Predeterminado",
+    "defaultTimezone": "Zona Horaria Predeterminada",
+    "dateFormat": "Formato de Fecha",
+    "currency": "Moneda",
+    "saveLocalizationSettings": "Guardar Configuración de Localización",
+    "themeSettings": "Configuración de Tema",
+    "primaryColor": "Color Primario",
+    "secondaryColor": "Color Secundario",
+    "enableDarkModeDefault": "Habilitar Modo Oscuro por Defecto",
+    "saveThemeSettings": "Guardar Configuración de Tema",
+    "settingsSaved": "Configuración guardada exitosamente",
+    "failedToSaveSettings": "Error al guardar la configuración. Por favor, inténtalo de nuevo."
+  },
+  "analytics": {
+    "title": "Analíticas Avanzadas",
+    "description": "Información detallada y métricas de rendimiento para la plataforma.",
+    "failedToLoad": "Error al cargar datos de analíticas. Por favor, actualiza la página.",
+    "last24Hours": "Últimas 24 horas",
+    "last7Days": "Últimos 7 días",
+    "last30Days": "Últimos 30 días",
+    "last90Days": "Últimos 90 días",
+    "customRange": "Rango Personalizado",
+    "exportReport": "Exportar Reporte",
+    "totalUsers": "Total de Usuarios",
+    "newToday": "nuevos hoy",
+    "activeUsers": "Usuarios Activos",
+    "active": "activo",
+    "userRetention": "Retención de Usuarios",
+    "excellentRetention": "Excelente retención",
+    "systemHealth": "Estado del Sistema",
+    "performanceMetrics": "Métricas de Rendimiento",
+    "responseTime": "Tiempo de Respuesta",
+    "throughput": "Rendimiento",
+    "errorRate": "Tasa de Error",
+    "uptime": "Tiempo de Actividad",
+    "topPerformingExams": "Exámenes de Mejor Rendimiento",
+    "totalExams": "Total de Exámenes",
+    "totalQuestions": "Total de Preguntas",
+    "completionRate": "Tasa de Finalización",
+    "averageCompletionRate": "Tasa de finalización promedio",
+    "geographicDistribution": "Distribución Geográfica",
+    "noGeographicData": "No hay datos geográficos disponibles",
+    "recentSystemActivity": "Actividad Reciente del Sistema",
+    "failedToLoadActivity": "Error al cargar registros de actividad",
+    "noRecentActivity": "Sin actividad reciente"
+  },
+  "profile": {
+    "title": "Configuración de Perfil",
+    "description": "Gestiona la información de tu cuenta de administrador y preferencias.",
+    "profileUpdated": "Perfil actualizado",
+    "profileUpdatedDescription": "La información personal se ha guardado exitosamente.",
+    "failedToUpdateProfile": "Error al actualizar el perfil. Por favor, intenta de nuevo.",
+    "passwordsDoNotMatch": "Las nuevas contraseñas no coinciden.",
+    "passwordTooShort": "La contraseña debe tener al menos 8 caracteres.",
+    "passwordUpdated": "Contraseña actualizada",
+    "passwordUpdatedDescription": "Tu contraseña ha sido cambiada exitosamente.",
+    "failedToChangePassword": "Error al cambiar la contraseña. Por favor, verifica tu contraseña actual.",
+    "preferencesSaved": "Preferencias guardadas",
+    "preferencesSavedDescription": "Las preferencias de notificación han sido actualizadas.",
+    "failedToSavePreferences": "Error al guardar las preferencias de notificación. Por favor, intenta de nuevo.",
+    "failedToLoadProfile": "Error al cargar los datos del perfil. Por favor, intenta de nuevo.",
+    "profileOverview": "Resumen del Perfil",
+    "personalInformation": "Información Personal",
+    "firstName": "Nombre",
+    "lastName": "Apellido",
+    "emailAddress": "Dirección de Email",
+    "phoneNumber": "Número de Teléfono",
+    "location": "Ubicación",
+    "saveChanges": "Guardar Cambios",
+    "securitySettings": "Configuración de Seguridad",
+    "currentPassword": "Contraseña Actual",
+    "newPassword": "Nueva Contraseña",
+    "confirmPassword": "Confirmar Contraseña",
+    "twoFactorAuthentication": "Autenticación de Dos Factores",
+    "addExtraLayerSecurity": "Agregar una capa extra de seguridad",
+    "loginAlerts": "Alertas de Inicio de Sesión",
+    "getNotifiedNewLogins": "Recibir notificaciones de nuevos inicios de sesión",
+    "updateSecurity": "Actualizar Seguridad",
+    "notificationPreferences": "Preferencias de Notificación",
+    "emailNotifications": "Notificaciones por Email",
+    "systemAlerts": "Alertas del Sistema",
+    "criticalSystemNotifications": "Notificaciones críticas del sistema",
+    "userActivity": "Actividad de Usuario",
+    "newUserRegistrations": "Nuevos registros de usuario y actividad",
+    "weeklyReports": "Reportes Semanales",
+    "platformUsageSummaries": "Resúmenes de uso de la plataforma",
+    "pushNotifications": "Notificaciones Push",
+    "emergencyAlerts": "Alertas de Emergencia",
+    "urgentSystemIssues": "Problemas urgentes del sistema",
+    "maintenanceUpdates": "Actualizaciones de Mantenimiento",
+    "scheduledMaintenanceNotifications": "Notificaciones de mantenimiento programado",
+    "featureUpdates": "Actualizaciones de Funciones",
+    "newFeatureAnnouncements": "Anuncios de nuevas funciones",
+    "savePreferences": "Guardar Preferencias"
+  },
+  "help": {
+    "title": "Ayuda y Soporte",
+    "description": "Obtén ayuda, accede a recursos y contacta a nuestro equipo de soporte.",
+    "ticketSubmitted": "Ticket de soporte enviado",
+    "ticketSubmittedDescription": "Te responderemos dentro de 24 horas.",
+    "searchPlaceholder": "Buscar artículos de ayuda, guías y preguntas frecuentes...",
+    "available247": "Disponible 24/7",
+    "faq": "Preguntas Frecuentes",
+    "submitTicket": "Enviar Ticket de Soporte",
+    "subject": "Asunto",
+    "subjectPlaceholder": "Breve descripción de tu problema",
+    "priority": "Prioridad",
+    "priorityLow": "Baja",
+    "priorityMedium": "Media",
+    "priorityHigh": "Alta",
+    "priorityUrgent": "Urgente",
+    "description": "Descripción",
+    "descriptionPlaceholder": "Por favor, proporciona información detallada sobre tu problema...",
+    "submitTicketButton": "Enviar Ticket",
+    "resourcesDocumentation": "Recursos y Documentación",
+    "liveChat": "Chat en Vivo",
+    "liveChatDescription": "Obtén ayuda instantánea de nuestro equipo de soporte",
+    "startChat": "Iniciar Chat",
+    "phoneSupport": "Soporte Telefónico",
+    "phoneSupportDescription": "Llámanos para problemas urgentes",
+    "emailSupport": "Soporte por Email",
+    "emailSupportDescription": "Envíanos un mensaje detallado",
+    "communityForum": "Foro de la Comunidad",
+    "communityForumDescription": "Conecta con otros administradores",
+    "visitForum": "Visitar Foro",
+    "adminUserGuide": "Guía de Usuario Administrador",
+    "adminUserGuideDescription": "Guía completa para la administración de la plataforma",
+    "videoTutorials": "Tutoriales en Video",
+    "videoTutorialsDescription": "Tutoriales paso a paso en video",
+    "apiDocumentation": "Documentación de API",
+    "apiDocumentationDescription": "Documentación técnica para desarrolladores",
+    "bestPractices": "Mejores Prácticas",
+    "bestPracticesDescription": "Prácticas recomendadas para un rendimiento óptimo",
+    "securityGuidelines": "Directrices de Seguridad",
+    "securityGuidelinesDescription": "Mejores prácticas de seguridad y cumplimiento",
+    "systemRequirements": "Requisitos del Sistema",
+    "systemRequirementsDescription": "Requisitos técnicos y especificaciones"
   },
   "sidebar": {
     "adminPanel": "Panel de Administración",
@@ -100,7 +316,10 @@
   "resources": {
     "user": "usuario",
     "question": "pregunta",
-    "exam": "examen"
+    "exam": "examen",
+    "users": "usuarios",
+    "exams": "exámenes",
+    "dashboard_stats": "estadísticas del panel"
   },
   "status": {
     "unknown": "Desconocido"
