--- a/frontend/src/locales/pt/admin.json
+++ b/frontend/src/locales/pt/admin.json
@@ -21,7 +21,7 @@
     "averageAccuracy": "Precisão Média",
     "noRecentActivity": "Nenhuma atividade recente",
     "failedToLoadDashboard": "Falha ao carregar dados do painel. Por favor, atualize a página.",
-    "failedToLoadActivity": "Falha ao carregar registros de atividade"
+    "failedToLoadActivity": "Falha ao carregar logs de atividade"
   },
   "users": {
     "title": "Gestão de Usuários",
@@ -69,7 +69,223 @@
     "question": "Pergunta",
     "addNew": "Adicionar um novo",
     "cancel": "Cancelar",
-    "create": "Criar"
+    "create": "Criar",
+    "subjectName": "Nome da Matéria",
+    "duration": "Duração",
+    "type": "Tipo",
+    "multipleChoice": "Múltipla Escolha",
+    "difficulty": "Dificuldade",
+    "medium": "Médio",
+    "options": "Opções",
+    "optionsCount": "opções",
+    "answer": "Resposta",
+    "draft": "Rascunho",
+    "created": "Criado",
+    "manageSubjectsFor": "Gerenciar matérias e tópicos para",
+    "manageQuestionsFor": "Gerenciar perguntas para",
+    "searchSubjectsPlaceholder": "Buscar matérias...",
+    "searchQuestionsPlaceholder": "Buscar perguntas...",
+    "toPlatform": "à plataforma",
+    "examNamePlaceholder": "ex., ENEM",
+    "country": "País",
+    "countryPlaceholder": "ex., Brasil",
+    "descriptionPlaceholder": "Breve descrição do exame",
+    "flagEmoji": "Emoji da Bandeira",
+    "flagPlaceholder": "🇧🇷",
+    "selectStatus": "Selecionar status",
+    "active": "Ativo",
+    "archived": "Arquivado",
+    "questionPlaceholder": "Digite o texto da pergunta",
+    "selectType": "Selecionar tipo",
+    "trueFalse": "Verdadeiro/Falso",
+    "shortAnswer": "Resposta Curta",
+    "selectDifficulty": "Selecionar dificuldade",
+    "easy": "Fácil",
+    "hard": "Difícil",
+    "answerOptions": "Opções de Resposta",
+    "optionPlaceholder": "Opção {{id}}",
+    "correctAnswer": "Resposta Correta",
+    "selectCorrectAnswer": "Selecionar resposta correta",
+    "emptyOption": "Opção vazia",
+    "explanationConcept": "Conceito da Explicação",
+    "conceptPlaceholder": "Conceito principal sendo testado",
+    "reasoning": "Raciocínio",
+    "reasoningPlaceholder": "Explique por que esta é a resposta correta"
+  },
+  "settings": {
+    "title": "Configurações",
+    "description": "Configurar definições da aplicação e preferências.",
+    "accessDenied": "Acesso negado. Apenas Super Administradores podem acessar as configurações.",
+    "accessDeniedTitle": "Acesso Negado",
+    "accessDeniedDescription": "Você não tem permissão para acessar esta página.",
+    "superAdminRequired": "Acesso de Super Administrador Necessário",
+    "superAdminMessage": "Apenas Super Administradores podem acessar as configurações do sistema. Por favor, entre em contato com seu administrador do sistema se precisar de acesso a essas funcionalidades.",
+    "returnToDashboard": "Voltar ao Painel de Controle",
+    "failedToLoad": "Falha ao carregar configurações do sistema. Usando valores padrão.",
+    "generalSettings": "Configurações Gerais",
+    "applicationName": "Nome da Aplicação",
+    "version": "Versão",
+    "description": "Descrição",
+    "maintenanceMode": "Modo de Manutenção",
+    "saveGeneralSettings": "Salvar Configurações Gerais",
+    "databaseSettings": "Configurações do Banco de Dados",
+    "databaseHost": "Host do Banco de Dados",
+    "port": "Porta",
+    "databaseName": "Nome do Banco de Dados",
+    "enableSSL": "Habilitar SSL",
+    "saveDatabaseSettings": "Salvar Configurações do Banco de Dados",
+    "emailSettings": "Configurações de Email",
+    "smtpHost": "Host SMTP",
+    "smtpPort": "Porta SMTP",
+    "smtpUsername": "Usuário SMTP",
+    "fromEmail": "Email de Origem",
+    "enableEmailNotifications": "Habilitar Notificações por Email",
+    "saveEmailSettings": "Salvar Configurações de Email",
+    "securitySettings": "Configurações de Segurança",
+    "sessionTimeout": "Tempo Limite da Sessão (minutos)",
+    "maxLoginAttempts": "Máximo de Tentativas de Login",
+    "enableTwoFactor": "Habilitar Autenticação de Dois Fatores",
+    "enforcePasswordComplexity": "Aplicar Complexidade de Senha",
+    "enableAuditLogging": "Habilitar Log de Auditoria",
+    "saveSecuritySettings": "Salvar Configurações de Segurança",
+    "localizationSettings": "Configurações de Localização",
+    "defaultLanguage": "Idioma Padrão",
+    "defaultTimezone": "Fuso Horário Padrão",
+    "dateFormat": "Formato de Data",
+    "currency": "Moeda",
+    "saveLocalizationSettings": "Salvar Configurações de Localização",
+    "themeSettings": "Configurações de Tema",
+    "primaryColor": "Cor Primária",
+    "secondaryColor": "Cor Secundária",
+    "enableDarkModeDefault": "Habilitar Modo Escuro por Padrão",
+    "saveThemeSettings": "Salvar Configurações de Tema",
+    "settingsSaved": "Configurações salvas com sucesso",
+    "failedToSaveSettings": "Falha ao salvar configurações. Tente novamente."
+  },
+  "analytics": {
+    "title": "Análises Avançadas",
+    "description": "Insights detalhados e métricas de desempenho para a plataforma.",
+    "failedToLoad": "Falha ao carregar dados de análises. Por favor, atualize a página.",
+    "last24Hours": "Últimas 24 horas",
+    "last7Days": "Últimos 7 dias",
+    "last30Days": "Últimos 30 dias",
+    "last90Days": "Últimos 90 dias",
+    "customRange": "Intervalo Personalizado",
+    "exportReport": "Exportar Relatório",
+    "totalUsers": "Total de Usuários",
+    "newToday": "novos hoje",
+    "activeUsers": "Usuários Ativos",
+    "active": "ativo",
+    "userRetention": "Retenção de Usuários",
+    "excellentRetention": "Excelente retenção",
+    "systemHealth": "Saúde do Sistema",
+    "performanceMetrics": "Métricas de Desempenho",
+    "responseTime": "Tempo de Resposta",
+    "throughput": "Taxa de Transferência",
+    "errorRate": "Taxa de Erro",
+    "uptime": "Tempo de Atividade",
+    "topPerformingExams": "Exames de Melhor Desempenho",
+    "totalExams": "Total de Exames",
+    "totalQuestions": "Total de Perguntas",
+    "completionRate": "Taxa de Conclusão",
+    "averageCompletionRate": "Taxa de conclusão média",
+    "geographicDistribution": "Distribuição Geográfica",
+    "noGeographicData": "Nenhum dado geográfico disponível",
+    "recentSystemActivity": "Atividade Recente do Sistema",
+    "failedToLoadActivity": "Falha ao carregar logs de atividade",
+    "noRecentActivity": "Nenhuma atividade recente"
+  },
+  "profile": {
+    "title": "Configurações de Perfil",
+    "description": "Gerencie as informações da sua conta de administrador e preferências.",
+    "profileUpdated": "Perfil atualizado",
+    "profileUpdatedDescription": "As informações pessoais foram salvas com sucesso.",
+    "failedToUpdateProfile": "Falha ao atualizar o perfil. Por favor, tente novamente.",
+    "passwordsDoNotMatch": "As novas senhas não coincidem.",
+    "passwordTooShort": "A senha deve ter pelo menos 8 caracteres.",
+    "passwordUpdated": "Senha atualizada",
+    "passwordUpdatedDescription": "Sua senha foi alterada com sucesso.",
+    "failedToChangePassword": "Falha ao alterar a senha. Por favor, verifique sua senha atual.",
+    "preferencesSaved": "Preferências salvas",
+    "preferencesSavedDescription": "As preferências de notificação foram atualizadas.",
+    "failedToSavePreferences": "Falha ao salvar as preferências de notificação. Por favor, tente novamente.",
+    "failedToLoadProfile": "Falha ao carregar dados do perfil. Por favor, tente novamente.",
+    "profileOverview": "Visão Geral do Perfil",
+    "personalInformation": "Informações Pessoais",
+    "firstName": "Nome",
+    "lastName": "Sobrenome",
+    "emailAddress": "Endereço de Email",
+    "phoneNumber": "Número de Telefone",
+    "location": "Localização",
+    "saveChanges": "Salvar Alterações",
+    "securitySettings": "Configurações de Segurança",
+    "currentPassword": "Senha Atual",
+    "newPassword": "Nova Senha",
+    "confirmPassword": "Confirmar Senha",
+    "twoFactorAuthentication": "Autenticação de Dois Fatores",
+    "addExtraLayerSecurity": "Adicionar uma camada extra de segurança",
+    "loginAlerts": "Alertas de Login",
+    "getNotifiedNewLogins": "Receber notificações de novos logins",
+    "updateSecurity": "Atualizar Segurança",
+    "notificationPreferences": "Preferências de Notificação",
+    "emailNotifications": "Notificações por Email",
+    "systemAlerts": "Alertas do Sistema",
+    "criticalSystemNotifications": "Notificações críticas do sistema",
+    "userActivity": "Atividade do Usuário",
+    "newUserRegistrations": "Novos registros de usuário e atividade",
+    "weeklyReports": "Relatórios Semanais",
+    "platformUsageSummaries": "Resumos de uso da plataforma",
+    "pushNotifications": "Notificações Push",
+    "emergencyAlerts": "Alertas de Emergência",
+    "urgentSystemIssues": "Problemas urgentes do sistema",
+    "maintenanceUpdates": "Atualizações de Manutenção",
+    "scheduledMaintenanceNotifications": "Notificações de manutenção programada",
+    "featureUpdates": "Atualizações de Recursos",
+    "newFeatureAnnouncements": "Anúncios de novos recursos",
+    "savePreferences": "Salvar Preferências"
+  },
+  "help": {
+    "title": "Ajuda e Suporte",
+    "description": "Obtenha ajuda, acesse recursos e entre em contato com nossa equipe de suporte.",
+    "ticketSubmitted": "Ticket de suporte enviado",
+    "ticketSubmittedDescription": "Entraremos em contato dentro de 24 horas.",
+    "searchPlaceholder": "Pesquisar artigos de ajuda, guias e perguntas frequentes...",
+    "available247": "Disponível 24/7",
+    "faq": "Perguntas Frequentes",
+    "submitTicket": "Enviar Ticket de Suporte",
+    "subject": "Assunto",
+    "subjectPlaceholder": "Breve descrição do seu problema",
+    "priority": "Prioridade",
+    "priorityLow": "Baixa",
+    "priorityMedium": "Média",
+    "priorityHigh": "Alta",
+    "priorityUrgent": "Urgente",
+    "description": "Descrição",
+    "descriptionPlaceholder": "Por favor, forneça informações detalhadas sobre seu problema...",
+    "submitTicketButton": "Enviar Ticket",
+    "resourcesDocumentation": "Recursos e Documentação",
+    "liveChat": "Chat ao Vivo",
+    "liveChatDescription": "Obtenha ajuda instantânea de nossa equipe de suporte",
+    "startChat": "Iniciar Chat",
+    "phoneSupport": "Suporte por Telefone",
+    "phoneSupportDescription": "Ligue para nós para problemas urgentes",
+    "emailSupport": "Suporte por Email",
+    "emailSupportDescription": "Envie-nos uma mensagem detalhada",
+    "communityForum": "Fórum da Comunidade",
+    "communityForumDescription": "Conecte-se com outros administradores",
+    "visitForum": "Visitar Fórum",
+    "adminUserGuide": "Guia do Usuário Administrador",
+    "adminUserGuideDescription": "Guia completo para administração da plataforma",
+    "videoTutorials": "Tutoriais em Vídeo",
+    "videoTutorialsDescription": "Tutoriais passo a passo em vídeo",
+    "apiDocumentation": "Documentação da API",
+    "apiDocumentationDescription": "Documentação técnica para desenvolvedores",
+    "bestPractices": "Melhores Práticas",
+    "bestPracticesDescription": "Práticas recomendadas para desempenho ideal",
+    "securityGuidelines": "Diretrizes de Segurança",
+    "securityGuidelinesDescription": "Melhores práticas de segurança e conformidade",
+    "systemRequirements": "Requisitos do Sistema",
+    "systemRequirementsDescription": "Requisitos técnicos e especificações"
   },
   "sidebar": {
     "adminPanel": "Painel de Administração",
@@ -100,7 +316,10 @@
   "resources": {
     "user": "usuário",
     "question": "pergunta",
-    "exam": "exame"
+    "exam": "exame",
+    "users": "usuários",
+    "exams": "exames",
+    "dashboard_stats": "estatísticas do painel"
   },
   "status": {
     "unknown": "Desconhecido"
