feat: Implement RAG-powered AI tutor and fix login/i18n bugs

--- a/frontend/src/locales/en/common.json
+++ b/frontend/src/locales/en/common.json
@@ -1,6 +1,9 @@
 {
   "error": "Error",
   "loading": "Loading...",
+  "common": {
+    "error": "Error"
+  },
   "buttons": {
     "login": "Login",
     "logout": "Logout",
